--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ author: "Jeedom"
 image: https://www.jeedom.com/site/logo.png
 twitter:
   username: Jeedom_domotic
+future: true
 social:
   name: Jeedom
   links:
